# jb-ai-test-gas

./: .dockerignore  .gitignore  Dockerfile  README.md  TEST.md  docker-compose.yaml
env-setuper/: .gitignore  Makefile  README.md  pyproject.toml
env-setuper/env_setuper/: assistants.py  cli.py  prompts.py  terminal.py  tools.py  workflows.py
env-setuper/tests/: conftest.py  test_terminal_subprocess.py
python-mnist/: Makefile  main.py  pyproject.toml
python-mnist/src/: model.py  train.py  utils.py
python-mnist/tests/: test_model.py  test_train.py
rust_web_service/: cargo.toml
rust_web_service/src/: lib.rs  main.rs
rust_web_service/tests/: integration_test.rs
rust_web_service_f/: README.md  cargo.toml
rust_web_service_f/rust_web_service_f_lib/: Cargo.toml
rust_web_service_f/src/: main.rs
rust_web_service_f/tests/: integration_test.rs
