[tool.poetry]
name = "env-setuper"
version = "0.1.0"
description = "agent for coding environment setup"
authors = ["Andrei Gasparian <gasparian.andrey@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.scripts]
env-setuper = "env_setuper.cli:app"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = "^0.12.5"
rich = "^13.9.2"
openai = "^1.70.0"
tiktoken = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.6.9"
mypy = "^1.12.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=env_setuper --cov-report html --cov-report term --ignore=tests/projects"
testpaths = ["tests/"]
python_classes = "*Suite"

[tool.coverage.run]
omit = [
    "**/__init__.py",
    ]

[tool.mypy]
ignore_missing_imports = true
exclude = ["^.venv/", "^dist/", "^ruff_cache/", "^pytest_cache/", "^conftest.py*"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.ipynb"
]
line-length = 120
indent-width = 2
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]
ignore = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
