[tool.poetry]
name = "mnist-cnn"
version = "0.1.0"
description = "A simple CNN for MNIST classification"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.2"
torchvision = "0.17.0"
numpy = "<2"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
testpaths = ["tests/"]
python_classes = "*Suite"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
